fix: two rows overview section on mobile & one column list deatil on mobile

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -359,7 +359,7 @@ body {
 }
 @media only screen and (max-width: 37.5em) {
   .overview__rating-count {
-    font-size: 0.5rem;
+    font-size: 1rem;
   }
 }
 
